# camcontrol

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
camcontrol/: __init__.py  cli.py  device.py  discovery.py  discovery_linux.py  discovery_windows.py  exceptions.py  interactive.py  serial_manager.py
camcontrol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
camlock/: __init__.py  cli.py  device.py  discovery.py  discovery_windows.py  exceptions.py  interactive.py  serial_manager.py
camlock.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: basic_demo.py
